# ESPN_CRICKET

./: CMakeLists.txt  README.md  championtrophy.cpp  championtrophy.h  championtrophy.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  players.cpp  players.h  players.json  players.ui  tournamentscreen.cpp  tournamentscreen.h  tournamentscreen.ui
